# aihc

./: .gitignore  AGENTS.md  IDEAS.md  PIPELINE.md  README.md  aihc-parser.cabal  flake.nix  out.txt  test.hs
components/haskell-cpp/: README.md  aihc-cpp.cabal
components/haskell-cpp/app/cpp-progress/: Main.hs
components/haskell-cpp/src/: Cpp.hs
components/haskell-cpp/test/: Spec.hs
components/haskell-cpp/test/Test/: Progress.hs
components/haskell-cpp/test/Test/Fixtures/progress/: define-basic.hs  elseif-branch.hs  endif-balance.hs  error-directive.hs  function-macro-basic.hs  if-arithmetic.hs  if-boolean-and.hs  if-comparison.hs  if-defined-bare.hs  if-defined-paren.hs  ifdef-true.hs  ifndef-true.hs  include-basic.hs  isndef-alias.hs  line-directive-file-and-number.hs  line-directive-number-only.hs  macro-expansion.hs  manifest.tsv  multiline-define-long.hs  multiline-define.hs  pkg-ad.hs  stringification-newline.hs  stringify-order.hs  token-concat-cat-xcat-call.hs  token-concat-declare-struct-type.hs  undef-basic.hs  warning-directive.hs
components/haskell-name-resolution/: README.md  aihc-name-resolution.cabal  cabal.project
components/haskell-name-resolution/app/name-resolution-progress/: Main.hs
components/haskell-name-resolution/src/: Resolver.hs
components/haskell-name-resolution/src/Resolver/: Ast.hs  Types.hs
components/haskell-name-resolution/test/: Spec.hs
components/haskell-name-resolution/test/Test/: Oracle.hs  Progress.hs  ResolveFacts.hs  Resolver.hs
components/haskell-name-resolution/test/Test/Fixtures/progress/: manifest.tsv
components/haskell-name-resolution/test/Test/Fixtures/resolve/: backward-reference.hs  duplicate-binding.hs  forward-reference-chain.hs  nested-application.hs  shadow-prelude-name.hs  unbound-variable.hs  use-prelude-name.hs
components/haskell-name-resolution/test/Test/Oracle/: Resolve.hs
components/haskell-parser/: README.md  aihc-parser.cabal  cabal.project  ghc_errors_v3.txt
components/haskell-parser/app/extension-progress/: Main.hs
components/haskell-parser/app/h2010-progress/: Main.hs
components/haskell-parser/app/hackage-tester/: Main.hs
components/haskell-parser/app/lexer-progress/: Main.hs
components/haskell-parser/app/parser-fuzz/: Main.hs
components/haskell-parser/app/parser-fuzz/ParserFuzz/: Arbitrary.hs  CLI.hs  Testing.hs  Types.hs
components/haskell-parser/app/parser-fuzz/ParserFuzz/Arbitrary/: Helpers.hs
components/haskell-parser/app/parser-progress/: Main.hs
components/haskell-parser/app/stackage-progress/: Main.hs  ghc_errors.txt
components/haskell-parser/common/: CppSupport.hs  ExtensionSupport.hs  GhcOracle.hs  HackageSupport.hs  HseExtensions.hs  LexerGolden.hs  OracleExtensions.hs  ParserGolden.hs  ParserValidation.hs
components/haskell-parser/common/HackageTester/: CLI.hs
components/haskell-parser/src/: Parser.hs  Resolver.hs
components/haskell-parser/src/Parser/: Ast.hs  Canonical.hs  Lexer.hs  Pretty.hs  Types.hs
components/haskell-parser/src/Parser/Internal/: Common.hs  Decl.hs  Expr.hs
components/haskell-parser/src/Resolver/: Types.hs
components/haskell-parser/test/: Spec.hs
components/haskell-parser/test/Test/: Oracle.hs  ResolveFacts.hs  Resolver.hs
components/haskell-parser/test/Test/Extensions/: Suite.hs
components/haskell-parser/test/Test/Fixtures/: extensions.tsv  roundtrip-oracle-xfail.txt
components/haskell-parser/test/Test/Fixtures/BangPatterns/: bang-case-alt.hs  bang-fun-arg.hs  bang-lambda.hs  bang-let-binding.hs  bang-where.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/BinaryLiterals/: manifest.tsv
components/haskell-parser/test/Test/Fixtures/DerivingStrategies/: deriving-multiple-clauses.hs  deriving-newtype-list.hs  deriving-newtype.hs  deriving-stock-multi.hs  deriving-stock-single.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/DoAndIfThenElse/: manifest.tsv
components/haskell-parser/test/Test/Fixtures/EmptyCase/: empty-case-multiline-type-param.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/EmptyDataDecls/: empty-data-basic.hs  empty-data-export.hs  empty-data-multi.hs  empty-data-param.hs  empty-data-with-kind.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/ExistentialQuantification/: existential-infix-constructor.hs  existential-multi-constructor.hs  existential-prefix-context.hs  existential-record-context.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/ExplicitForAll/: forall-class-method.hs  forall-local-signature.hs  forall-nested-arrow.hs  forall-top-level.hs  forall-with-context.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/ExplicitLevelImports/: explicit-level-basic-modifiers.hs  explicit-level-with-as.hs  explicit-level-with-hiding.hs  explicit-level-with-import-list.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/FunctionalDependencies/: fundep-bidirectional.hs  fundep-class-instance.hs  fundep-multi-left.hs  fundep-single.hs  fundep-with-context.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/ImportQualifiedPost/: import-qualified-post-basic.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/InstanceSigs/: instance-sig-basic.hs  instance-sig-constrained.hs  instance-sig-default.hs  instance-sig-multi-method.hs  instance-sig-where-layout.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/KindSignatures/: kindsig-class-head.hs  kindsig-constraint.hs  kindsig-data-param.hs  kindsig-higher-kinded.hs  kindsig-newtype.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/LambdaCase/: lambda-case-basic.hs  lambda-case-nested.hs  manifest.tsv
components/haskell-parser/test/Test/Fixtures/MultiParamTypeClasses/: manifest.tsv  mptc-class-basic.hs  mptc-constrained-method.hs  mptc-instance-basic.hs  mptc-superclass.hs  (+1 more)
components/haskell-parser/test/Test/H2010/: Suite.hs
components/haskell-parser/test/Test/HackageTester/: Suite.hs
components/haskell-parser/test/Test/Lexer/: Suite.hs
components/haskell-parser/test/Test/Parser/: Suite.hs
(+390 files in other folders)
