cabal-version:      3.8
name:               aihc-parser
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             David Himmelstrup
maintainer:         lemmih@gmail.com
category:           Compilers
synopsis:           From-scratch Haskell parser with differential tests

library
  exposed-modules:
      Parser
    , Parser.Ast
    , Parser.Pretty
    , Parser.Types
  other-modules:
      Parser.Lexer
  hs-source-dirs:   src
  build-depends:
      base >=4.16 && <5
    , text >=1.2
    , containers
    , megaparsec
    , prettyprinter
  ghc-options:        -Wall -Werror
  default-language: Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:
      test
    , common
  main-is:          Spec.hs
  other-modules:
      CppSupport
    , ExtensionSupport
    , GhcOracle
    , OracleExtensions
    , Test.Oracle
    , Test.H2010.Suite
    , Test.Extensions.Suite
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , text
    , containers
    , directory
    , filepath
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , ghc-lib-parser
  ghc-options:        -Wall -Werror
  default-language: Haskell2010

executable h2010-progress
  hs-source-dirs:
      app/h2010-progress
    , common
  main-is:          Main.hs
  other-modules:
      CppSupport
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , text
    , directory
    , filepath
    , ghc-lib-parser
  ghc-options:        -Wall -Werror
  default-language: Haskell2010

executable extension-progress
  hs-source-dirs:
      app/extension-progress
    , common
  main-is:          Main.hs
  other-modules:
      ExtensionSupport
    , GhcOracle
    , OracleExtensions
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , text
    , directory
    , filepath
    , ghc-lib-parser
    , time
  ghc-options:        -Wall -Werror
  default-language: Haskell2010

executable hackage-tester
  hs-source-dirs:
      app/hackage-tester
    , common
  main-is:          Main.hs
  other-modules:
      CppSupport
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , text
    , directory
    , filepath
    , ghc-lib-parser
    , Cabal
    , bytestring
    , process
  ghc-options:        -Wall -Werror
  default-language: Haskell2010
