cabal-version:      3.8
name:               aihc-parser
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             David Himmelstrup
maintainer:         lemmih@gmail.com
category:           Compilers
synopsis:           From-scratch Haskell parser with differential tests

library
  exposed-modules:
      Parser
    , Parser.Ast
    , Parser.Pretty
    , Parser.Types
  other-modules:
      Parser.Lexer
    , Parser.Internal.Common
    , Parser.Internal.Expr
    , Parser.Internal.Decl
  hs-source-dirs:   src
  build-depends:
      base >=4.16 && <5
    , text >=1.2
    , containers
    , megaparsec
    , prettyprinter
  ghc-options:        -Wall -Werror
  default-language: Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:
      test
    , common
  main-is:          Spec.hs
  other-modules:
      CppSupport
    , ExtensionSupport
    , GhcOracle
    , HackageTester.CLI
    , HackageTester.Model
    , HseExtensions
    , LexerGolden
    , ParserGolden
    , OracleExtensions
    , ParserValidation
    , ShrinkUtils
    , Test.Oracle
    , Test.H2010.Suite
    , Test.Extensions.Suite
    , Test.HackageTester.Suite
    , Test.Lexer.Suite
    , Test.Parser.Suite
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , text
    , containers
    , directory
    , filepath
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , ghc-lib-parser
    , Cabal-syntax
    , haskell-src-exts
    , aeson
    , yaml
    , optparse-applicative
  ghc-options:        -O2 -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable parser-progress
  hs-source-dirs:
      app/parser-progress
    , common
  main-is:          Main.hs
  other-modules:
      CppSupport
    , ExtensionSupport
    , GhcOracle
    , OracleExtensions
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , text
    , directory
    , filepath
    , ghc-lib-parser
    , Cabal-syntax
  ghc-options:        -Wall -Werror
  default-language: Haskell2010

executable lexer-progress
  hs-source-dirs:
      app/lexer-progress
    , common
  main-is:          Main.hs
  other-modules:
      LexerGolden
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , text
    , containers
    , directory
    , filepath
    , aeson
    , yaml
  ghc-options:        -Wall -Werror
  default-language: Haskell2010

executable extension-progress
  hs-source-dirs:
      app/extension-progress
    , common
  main-is:          Main.hs
  other-modules:
      ExtensionSupport
    , GhcOracle
    , OracleExtensions
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , text
    , directory
    , filepath
    , ghc-lib-parser
    , Cabal-syntax
    , time
  ghc-options:        -Wall -Werror
  default-language: Haskell2010

executable hackage-tester
  hs-source-dirs:
      app/hackage-tester
    , common
  main-is:          Main.hs
  other-modules:
      CppSupport
    , GhcOracle
    , HackageSupport
    , HackageTester.CLI
    , HackageTester.Model
    , HseExtensions
    , ParserValidation
    , ShrinkUtils
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , text
    , directory
    , filepath
    , ghc-lib-parser
    , Cabal
    , Cabal-syntax
    , bytestring
    , process
    , async
    , aeson
    , http-client
    , http-client-tls
    , optparse-applicative
    , haskell-src-exts
  ghc-options:        -O2 -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable stackage-progress
  hs-source-dirs:
      app/stackage-progress
    , common
  main-is:          Main.hs
  other-modules:
      CppSupport
    , GhcOracle
    , HackageSupport
    , HseExtensions
    , ParserValidation
    , ShrinkUtils
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , aihc-cpp
    , text
    , directory
    , filepath
    , ghc-lib-parser
    , process
    , async
    , Cabal
    , Cabal-syntax
    , bytestring
    , haskell-src-exts
  ghc-options:        -O2 -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable parser-fuzz
  hs-source-dirs:
      app/parser-fuzz
    , common
  main-is:          Main.hs
  other-modules:
      GhcOracle
    , HseExtensions
    , ParserValidation
    , ShrinkUtils
    , ParserFuzz.CLI
    , ParserFuzz.Testing
    , ParserFuzz.Types
    , ParserFuzz.Arbitrary
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , haskell-src-exts
    , QuickCheck
    , optparse-applicative
    , random
    , text
    , ghc-lib-parser
    , Cabal-syntax
  ghc-options:        -Wall -Werror
  default-language: GHC2021
